ListPage and minor fix