@@ -1,5 +1,9 @@
 package com.guerzonica.app.picodom.pages;
 
+import java.sql.SQLException;
+import java.net.URISyntaxException;
+import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.awt.Desktop;
 import java.util.Iterator;
@@ -13,9 +17,12 @@ import com.guerzonica.app.storage.models.ProductPrices;
 
 import javafx.stage.Stage;
 import javafx.scene.control.ListView;
+import javafx.application.Application;
 
+import javafx.application.HostServices;
+import javafx.application.Platform;
 
-public class ProductsPage extends ListPage implements ListPage.Listener<ProductItem> {
+public class ProductsPage extends ListPage<ProductPrices, ProductItem> implements ListPage.Listener<ProductPrices> {
 
   public static String title = "Products List";
   public static String cssClass = "products-List";
@@ -23,31 +30,27 @@ public class ProductsPage extends ListPage implements ListPage.Listener<ProductI
   private ListView<ProductItem> list;
   private ImageButton delete;
   private ImageButton link;
-  private Product selectedProduct = null;
+  private ProductPrices selectedProduct = null;
 
-  public ProductsPage(Stage stage) {
+  public ProductsPage(Stage stage) throws Exception {
+    super(stage, ProductsProvider.getProvider().collection, new ProductItem());
 
-    super(stage);
     this.delete = new ImageButton("icons/close.png");
     this.delete.setVisible(false);
     this.link = new ImageButton("icons/goto.png");
     this.link.setVisible(false);
 
-    try{
-      ProductsProvider provider = ProductsProvider.getProvider();
-      Iterator<ProductPrices> pp = provider.collection.iterator();
+      // // Iterator<ProductPrices> pp = provider.collection.iterator();
+      //
+      // // this.list = new ListView<ProductItem>();
+      // // this.list.getStyleClass().add(ProductsPage.cssClass);
+      //
+      // while(pp.hasNext()) {
+      //   // this.list.getItems().add(new ProductItem(pp.next()));
+      // }
+      //
+      // super.setList(list);
 
-      this.list = new ListView<ProductItem>();
-      this.list.getStyleClass().add(ProductsPage.cssClass);
-
-      while(pp.hasNext()) {
-        this.list.getItems().add(new ProductItem(pp.next().product));
-      }
-
-      super.setList(list);
-
-    } catch(Exception e) { }
-    
     this.initListeners();
     super.toolbar.setTitle(ProductsPage.title);
     super.toolbar.getRightNode().setSpacing(15);
@@ -55,31 +58,38 @@ public class ProductsPage extends ListPage implements ListPage.Listener<ProductI
 
   }
 
-  public void handle(ProductItem item) {
-    if(!this.delete.isVisible()) 
+  public void handle(ProductPrices item) {
+    System.out.println(item.product.getName());
+    if(!this.delete.isVisible())
       this.delete.setVisible(true);
     if(!this.link.isVisible()) this.link.setVisible(true);
-      this.selectedProduct = this.list.getSelectionModel().getSelectedItem().getProduct();
+      this.selectedProduct = item;
   }
 
   private void initListeners(){
     super.setListener(this);
-    
+
     this.delete.setOnAction(action -> {
       //this.list.getSelectionModel().getSelectedItem() delete item
+      try{
+      selectedProduct.product.DELETE();
+      } catch(SQLException e){
+        System.err.println("Can't delete product");
+        e.printStackTrace();
+      }
+
     });
 
     this.link.setOnAction(action -> {
-      Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
-      if (desktop != null && desktop.isSupported(Desktop.Action.BROWSE)) {
-        try {
-          System.out.println(this.selectedProduct.getLink());
-         desktop.browse(new URL(this.selectedProduct.getLink()).toURI());
-        } catch (Exception e) {
-          System.err.println("OPEN PRODUCT LINK FAILED");
-         e.printStackTrace();
-       }
-     }
+      if( Desktop.isDesktopSupported() ){
+        new Thread(() -> {
+           try {
+               Desktop.getDesktop().browse( new URI( selectedProduct.product.getLink() ) );
+           } catch (IOException | URISyntaxException e1) {
+               e1.printStackTrace();
+           }
+       }).start();
+      }
     });
   }
 
